--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "item": {
     "name": "时研Focus",
-    "description": "一款集众多功能于一起的专注时钟快应用，在这里你可以自定义时钟样式/壁纸、查看和同步专注总时长、参与云端时长排行榜、查看和撰写漂流瓶...购买链接：https://afdian.com/item/a8c95fba635a11f0afa25254001e7c00",
+    "description": "一款集众多功能于一起的专注时钟快应用，在这里你可以自定义时钟样式/壁纸、查看和同步专注总时长、参与云端时长排行榜、查看和撰写漂流瓶...购买链接：Solan.today ",
     "preview": [
       "preview.png"
     ],
